--- a/lecture6/lecture6.ipynb
+++ b/lecture6/lecture6.ipynb
@@ -25,15 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.545762Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.545559Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.551299Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.550671Z"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def is_palindrome(s):\n",
@@ -58,7 +51,36 @@
     "    True\n",
     "    >>> test = 'nurse run'\n",
     "    \"\"\"\n",
-    "    return True"
+    "\n",
+    "    processed_string = s.replace(\" \", \"\").lower()\n",
+    "    \n",
+    "    return processed_string == processed_string[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'radar' is a palindrome: True\n",
+      "'A man a plan a canal Panama' is a palindrome: True\n",
+      "'hello' is a palindrome: False\n",
+      "'nurses run' is a palindrome: True\n",
+      "'Madam' is a palindrome: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Test ---\n",
+    "print(f\"'radar' is a palindrome: {is_palindrome('radar')}\")\n",
+    "print(f\"'A man a plan a canal Panama' is a palindrome: {is_palindrome('A man a plan a canal Panama')}\")\n",
+    "print(f\"'hello' is a palindrome: {is_palindrome('hello')}\")\n",
+    "print(f\"'nurses run' is a palindrome: {is_palindrome('nurses run')}\")\n",
+    "print(f\"'Madam' is a palindrome: {is_palindrome('Madam')}\")"
    ]
   },
   {
@@ -84,15 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.552992Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.552836Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.555477Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.554979Z"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def are_anagrams(s1, s2):\n",
@@ -121,7 +136,40 @@
     "    >>> test2 == 'hypnotist'\n",
     "    True\n",
     "    \"\"\"\n",
-    "    pass"
+    "   \n",
+    "    norm_s1 = s1.lower()\n",
+    "    norm_s2 = s2.lower()\n",
+    "    \n",
+    "    #如果长度不同，一定不是字母异位词。\n",
+    "    if len(norm_s1) != len(norm_s2):\n",
+    "        return False\n",
+    "        \n",
+    "    # 对标准化后的字符串进行排序，并直接比较结果。\n",
+    "    return sorted(norm_s1) == sorted(norm_s2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'listen' and 'silent' are anagrams: True\n",
+      "'Orchestra' and 'Carthorse' are anagrams: True\n",
+      "'hello' and 'world' are anagrams: False\n",
+      "'Pythonist' and 'hypnotist' are anagrams: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Test ---\n",
+    "print(f\"'listen' and 'silent' are anagrams: {are_anagrams('listen', 'silent')}\")\n",
+    "print(f\"'Orchestra' and 'Carthorse' are anagrams: {are_anagrams('Orchestra', 'Carthorse')}\")\n",
+    "print(f\"'hello' and 'world' are anagrams: {are_anagrams('hello', 'world')}\")\n",
+    "print(f\"'Pythonist' and 'hypnotist' are anagrams: {are_anagrams('Pythonist', 'hypnotist')}\")"
    ]
   },
   {
@@ -148,15 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.557101Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.556939Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.559605Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.559113Z"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_median(nums):\n",
@@ -185,7 +226,48 @@
     "    2.5\n",
     "    >>> nums == [1.0, 3.0, 2.0, 4.0]\n",
     "    \"\"\"\n",
-    "    pass"
+    "    if not nums:\n",
+    "        return None\n",
+    "    \n",
+    "    sorted_nums = sorted(nums)\n",
+    "    n = len(sorted_nums)\n",
+    "    \n",
+    "    # 判断列表长度的奇偶性\n",
+    "    if n % 2 == 1:\n",
+    "        # 奇数：直接返回中间的元素\n",
+    "        middle_index = n // 2\n",
+    "        return sorted_nums[middle_index]\n",
+    "    else:\n",
+    "        # 偶数：计算中间两个元素的平均值\n",
+    "        upper_middle_index = n // 2\n",
+    "        lower_middle_index = upper_middle_index - 1\n",
+    "        \n",
+    "        median = (sorted_nums[lower_middle_index] + sorted_nums[upper_middle_index]) / 2\n",
+    "        return median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The median of [1.0, 3.0, 2.0] is: 2.0\n",
+      "The median of [1.0, 2.0, 0.0, 4.0] is: 1.5\n",
+      "The median of [1.0, 3.0, 2.0, 4.0] is: 2.5\n",
+      "The median of [] is: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Test ---\n",
+    "print(f\"The median of [1.0, 3.0, 2.0] is: {find_median([1.0, 3.0, 2.0])}\")\n",
+    "print(f\"The median of [1.0, 2.0, 0.0, 4.0] is: {find_median([1.0, 2.0, 0.0, 4.0])}\")\n",
+    "print(f\"The median of [1.0, 3.0, 2.0, 4.0] is: {find_median([1.0, 3.0, 2.0, 4.0])}\")\n",
+    "print(f\"The median of [] is: {find_median([])}\")"
    ]
   },
   {
@@ -214,15 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.561205Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.561058Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.563631Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.563104Z"
-    }
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def insertion_sort(nums):\n",
@@ -239,7 +314,49 @@
     "    >>> insertion_sort([])\n",
     "    []\n",
     "    \"\"\"\n",
-    "    pass"
+    "\n",
+    "    arr = nums[:]\n",
+    "    \n",
+    "    for i in range(1, len(arr)):\n",
+    "        key = arr[i]\n",
+    "        \n",
+    "        # 'j' 是 'key' 左边已排序部分的最后一个元素的索引\n",
+    "        j = i - 1\n",
+    "        \n",
+    "        # 将所有比 key 大的元素都向右移动一格。\n",
+    "        while j >= 0 and key < arr[j]:\n",
+    "            arr[j + 1] = arr[j]\n",
+    "            j -= 1\n",
+    "        \n",
+    "        # 将 key 插入到正确的位置。\n",
+    "        # while 循环结束后，j+1 就是 key 应该在的位置。\n",
+    "        arr[j + 1] = key\n",
+    "        \n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorting [3, 1, 2] -> [1, 2, 3]\n",
+      "Sorting [5, 2, 4, 6, 1, 3] -> [1, 2, 3, 4, 5, 6]\n",
+      "Sorting [3, 1, 2, 4] -> [1, 2, 3, 4]\n",
+      "Sorting [] -> []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Test ---\n",
+    "print(f\"Sorting [3, 1, 2] -> {insertion_sort([3, 1, 2])}\")\n",
+    "print(f\"Sorting [5, 2, 4, 6, 1, 3] -> {insertion_sort([5, 2, 4, 6, 1, 3])}\")\n",
+    "print(f\"Sorting [3, 1, 2, 4] -> {insertion_sort([3, 1, 2, 4])}\")\n",
+    "print(f\"Sorting [] -> {insertion_sort([])}\")"
    ]
   },
   {
@@ -261,17 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-13T09:02:09.565255Z",
-     "iopub.status.busy": "2025-08-13T09:02:09.565100Z",
-     "iopub.status.idle": "2025-08-13T09:02:09.567821Z",
-     "shell.execute_reply": "2025-08-13T09:02:09.567315Z"
-    }
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "def check_perfect(n):\n",
     "    \"\"\"\n",
     "    This function tests if the input number is an abundant, perfect or deficient number.\n",
@@ -296,7 +407,54 @@
     "    >>> check_perfect(28)\n",
     "    0\n",
     "    \"\"\"\n",
-    "    pass"
+    "    \n",
+    "    if n <= 1:\n",
+    "        return -1 \n",
+    "\n",
+    "    sum_of_divisors = 1\n",
+    "    \n",
+    "\n",
+    "    for i in range(2, int(math.sqrt(n)) + 1):\n",
+    "        if n % i == 0:\n",
+    "            sum_of_divisors += i\n",
+    "            \n",
+    "            pair = n // i\n",
+    "            \n",
+    "            if pair != i:\n",
+    "                sum_of_divisors += pair\n",
+    "    \n",
+    "    if sum_of_divisors > n:\n",
+    "        return 1  # Abundant \n",
+    "    elif sum_of_divisors == n:\n",
+    "        return 0  # Perfect \n",
+    "    else:\n",
+    "        return -1 # Deficient "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 is classified as: 0\n",
+      "5 is classified as: -1\n",
+      "12 is classified as: 1\n",
+      "28 is classified as: 0\n",
+      "1 is classified as: -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Test ---\n",
+    "print(f\"6 is classified as: {check_perfect(6)}\")   # Expected: 0\n",
+    "print(f\"5 is classified as: {check_perfect(5)}\")   # Expected: -1\n",
+    "print(f\"12 is classified as: {check_perfect(12)}\") # Expected: 1\n",
+    "print(f\"28 is classified as: {check_perfect(28)}\") # Expected: 0\n",
+    "print(f\"1 is classified as: {check_perfect(1)}\")   # Expected: -1"
    ]
   },
   {
@@ -330,7 +488,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "introduction-to-python-new",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -344,9 +502,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
