--- a/lecture5/lecture5.ipynb
+++ b/lecture5/lecture5.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,6 @@
     "    parts are i, j, and k.  For example, Quaternion(1, 2, 3, 4) represents the\n",
     "    quaternion 1 + 2i + 3j + 4k.\n",
     "\n",
-    "    初始化一个四元数。\n",
-    "    第一个值是实部，其余的是虚部 i, j, k。\n",
-    "    例如, Quaternion(1, 2, 3, 4) 代表四元数 1 + 2i + 3j + 4k。\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, a, b, c, d):\n",
@@ -148,21 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Quaternion:\n",
     "    \n",
     "    def __init__(self, a, b, c, d):\n",
-    "        # 使用下划线来表示一个属性是“私有的”。\n",
     "        self._1 = a\n",
     "        self._i = b\n",
     "        self._j = c\n",
     "        self._k = d\n",
     "\n",
     "    def __str__(self):\n",
-    "        \"\"\"返回四元数的字符串表示。\"\"\"\n",
     "        \n",
     "        def format_component(value, suffix):\n",
     "            if value == 0:\n",
@@ -256,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +292,6 @@
     "            a, b, c, d = self._1, self._i, self._j, self._k\n",
     "            e, f, g, h = other._1, other._i, other._j, other._k\n",
     "            \n",
-    "            # 应用哈密顿  乘积公式\n",
     "            new_1 = a*e - b*f - c*g - d*h\n",
     "            new_i = a*f + b*e + c*h - d*g\n",
     "            new_j = a*g - b*h + c*e + d*f\n",
@@ -309,7 +303,6 @@
     "        elif isinstance(other, (int, float)):\n",
     "            return Quaternion(self._1 * other, self._i * other, self._j * other, self._k * other)\n",
     "        \n",
-    "        # 对于不支持的类型，返回NotImplemented\n",
     "        else:\n",
     "            return NotImplemented\n"
    ]
@@ -584,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +591,7 @@
     "        self._j = c\n",
     "        self._k = d\n",
     "\n",
-    "    # 2. 新增的 __repr__ 方法\n",
+    "    # 新增的 __repr__ 方法\n",
     "    def __repr__(self):\n",
     "\n",
     "        return f\"Quaternion({self._1}, {self._i}, {self._j}, {self._k})\"\n",
@@ -623,7 +616,7 @@
     "            result = result[2:].strip()\n",
     "        return result\n",
     "\n",
-    "    # 3. 新增的 __eq__ 方法\n",
+    "    # 新增的 __eq__ 方法\n",
     "    def __eq__(self, other):\n",
     "  \n",
     "        if not isinstance(other, Quaternion):\n",
@@ -637,7 +630,7 @@
     "     \n",
     "        return Quaternion(self._1 + other._1, self._i + other._i, self._j + other._j, self._k + other._k)\n",
     "\n",
-    "    # 4. 新增的 __sub__ 方法\n",
+    "    # 新增的 __sub__ 方法\n",
     "    def __sub__(self, other):\n",
     "      \n",
     "        return Quaternion(self._1 - other._1, self._i - other._i, self._j - other._j, self._k - other._k)\n",
@@ -1022,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,15 +1056,12 @@
     "    def angles(self) -> list[float]:\n",
     "        c, a, b = self._edge_lengths[0], self._edge_lengths[1], self._edge_lengths[2]\n",
     "\n",
-    "        # 计算顶点 A 的角 (对边 a)\n",
     "        cos_A = (b**2 + c**2 - a**2) / (2 * b * c)\n",
     "        angle_A = math.acos(max(-1, min(1, cos_A))) # max/min防止浮点数误差超出acos定义域\n",
     "\n",
-    "        # 计算顶点 B 的角 (对边 b)\n",
     "        cos_B = (a**2 + c**2 - b**2) / (2 * a * c)\n",
     "        angle_B = math.acos(max(-1, min(1, cos_B)))\n",
     "        \n",
-    "        # 计算顶点 C 的角 (对边 c)\n",
     "        cos_C = (a**2 + b**2 - c**2) / (2 * a * b)\n",
     "        angle_C = math.acos(max(-1, min(1, cos_C)))\n",
     "\n",
@@ -1137,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1148,6 @@
     "        edge_lengths = self.edges()\n",
     "        c, a, b = edge_lengths[0], edge_lengths[1], edge_lengths[2]\n",
     "\n",
-    "        # 内部计算逻辑不变\n",
     "        cos_A = (b**2 + c**2 - a**2) / (2 * b * c)\n",
     "        angle_A = math.acos(max(-1, min(1, cos_A)))\n",
     "\n",
@@ -1168,7 +1157,6 @@
     "        cos_C = (a**2 + b**2 - c**2) / (2 * a * b)\n",
     "        angle_C = math.acos(max(-1, min(1, cos_C)))\n",
     "        \n",
-    "        # 按照测试用例的期望 [pi/4, pi/2, pi/4] 调整返回顺序\n",
     "        return [angle_B, angle_A, angle_C]\n",
     "\n",
     "    def contains_point(self, p: Point) -> bool:\n",
@@ -1229,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1233,6 @@
     "    def perimeter(self):\n",
     "        # Write appropriate code here, returning the perimeter of the polygon\n",
     "        # based on the stored vertices.\n",
-    "        # 调用 self.edges() 获取所有边，然后对它们的长度求和\n",
     "        return sum(edge.length() for edge in self.edges())\n",
     "\n",
     "    def edges(self):\n",
